tests/invalid/ann_assign_non_name/main.py
def run_case() -> None:
    xs: list[int] = [1]

    xs[0]: int = 2

if __name__ == "__main__":
    run_case()
